image lazy loader

--- a/app/globals.css
+++ b/app/globals.css
@@ -167,3 +167,22 @@ html::-webkit-scrollbar-track {
   transform: rotateY(180deg);
 }
 
+@keyframes shimmer {
+  100% {
+    transform: translateX(100%);
+  }
+}
+
+.animate-fadeIn {
+  animation: fadeIn 0.5s ease-in-out;
+}
+
+@keyframes fadeIn {
+  from {
+    opacity: 0;
+  }
+  to {
+    opacity: 1;
+  }
+}
+
